hir/src/output/snapshots/transmute_hir__output__xml__tests__write_ret.snap
---
source: hir/src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">add</ident>
      <ident id="ident:1">boolean</ident>
      <ident id="ident:2">div</ident>
      <ident id="ident:3">eq</ident>
      <ident id="ident:4">ge</ident>
      <ident id="ident:5">gt</ident>
      <ident id="ident:6">le</ident>
      <ident id="ident:7">lt</ident>
      <ident id="ident:8">mul</ident>
      <ident id="ident:9">neg</ident>
      <ident id="ident:10">neq</ident>
      <ident id="ident:11">number</ident>
      <ident id="ident:12">sub</ident>
      <ident id="ident:13">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="7">
      <ret mode="explicit" line="1" column="1" start="0" len="7">
        <expr id="expr:0" line="1" column="5" start="4" len="2">
          <number>42</number>
        </expr>
      </ret>
    </stmt>
  </ast>
</unit>
