hir/src/output/snapshots/transmute_hir__output__xml__tests__write_struct.snap
---
source: hir/src/output/xml.rs
expression: "&xml"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <ast>
    <identifiers>
      <ident id="ident:0">S</ident>
      <ident id="ident:1">a</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">b</ident>
      <ident id="ident:4">add</ident>
      <ident id="ident:5">boolean</ident>
      <ident id="ident:6">div</ident>
      <ident id="ident:7">eq</ident>
      <ident id="ident:8">ge</ident>
      <ident id="ident:9">gt</ident>
      <ident id="ident:10">le</ident>
      <ident id="ident:11">lt</ident>
      <ident id="ident:12">mul</ident>
      <ident id="ident:13">neg</ident>
      <ident id="ident:14">neq</ident>
      <ident id="ident:15">sub</ident>
      <ident id="ident:16">void</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="33">
      <struct>
        <identifier line="1" column="8" start="7" len="1">S</identifier>
        <fields>
          <field id="stmt:0:0" line="1" column="12" start="11" len="9">
            <name line="1" column="12" start="11" len="1">a</name>
            <type line="1" column="15" start="14" len="6">number</type>
          </field>
          <field id="stmt:0:1" line="1" column="23" start="22" len="9">
            <name line="1" column="23" start="22" len="1">b</name>
            <type line="1" column="26" start="25" len="6">number</type>
          </field>
        </fields>
      </struct>
    </stmt>
  </ast>
</unit>
